# virt-viewer

./: .codespellrc  .gitlab-ci.yml  Makefile.am  NEWS  README.md  config.h.in  configure.ac  meson.build  mingw-virt-viewer.spec.in  virt-viewer.spec.in
build-aux/: cfg.mk  maint.mk  meson.build  msitool.py  syntax-check.mk
ci/: centos-7.Dockerfile  centos-8.Dockerfile  centos-stream.Dockerfile  debian-10.Dockerfile  debian-9.Dockerfile  debian-sid.Dockerfile  fedora-31.Dockerfile  fedora-32.Dockerfile  fedora-rawhide-cross-mingw32.Dockerfile  fedora-rawhide-cross-mingw64.Dockerfile  fedora-rawhide.Dockerfile  gitlab.yml  manifest.yml  opensuse-151.Dockerfile  refresh  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile
data/: Makefile.am  meson.build  org.virt-manager.virt-viewer.appdata.xml.in  remote-viewer.appdata.xml.in
docs/: multimonitor-fullscreen-settings
icons/: Makefile.am  meson.build
icons/scalable/: Makefile.am
man/: remote-viewer.pod  virt-viewer.pod
po/: LINGUAS  Makefile.am  POTFILES  af.mini.po  am.mini.po  anp.mini.po  ar.mini.po  as.po  ast.mini.po  bal.mini.po  be.mini.po  bg.mini.po  bg.po  bn.mini.po  bn.po  bn_IN.mini.po  bn_IN.po  bo.mini.po  br.mini.po  brx.mini.po  bs.mini.po  ca.po  cs.mini.po  cs.po  cy.mini.po  da.mini.po  de.po  de_CH.mini.po  el.mini.po  en_GB.mini.po  eo.mini.po  es.po  et.mini.po  eu.mini.po  eu.po  fa.mini.po  fi.mini.po  fi.po  fr.mini.po  fr.po  (+85 more)
scripts/: require-dco.py
src/: Makefile.am  glib-compat.c  glib-compat.h  meson.build  ovirt-foreign-menu.c  ovirt-foreign-menu.h  remote-viewer-connect.h  remote-viewer-iso-list-dialog.c  remote-viewer-iso-list-dialog.h  remote-viewer.c  remote-viewer.h  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  (+32 more)
(+87 files in other folders)
